2025-05- ------------------------------------------------------------------------------------------------------------
2025-05- ------------------------------------------------------------------------------------------------------------
2025-05- ------------------------------------------------------------------------------------------------------------
2025-05- ------------------------------------------------------------------------------------------------------------
2025-05-23------------------------------------------------------------------------------------------------------------
* fixed compatibility issue between firefox and chrome that was due to the way I was shoehorning <style> into the
    <form> data.  DFDialog now allows "form" -or- {form:"form", style:"style"} as a parameter to pass in a proper
    style block that now gets attached to the head where it belongs. (and removed when dialog closes)
* added quick temporary actions to the Help menu for About and License
* changed 'properties' to 'Layout, anchors and depth' and introduced a new properties menu option which will be a 
    direct call to the dch handlers to create their own properties dialog

* adding a new plugin under JLPAINT as a tiny painting program (primarily for demoing how to create plugins)
* moved .odt and .dia files in /extra to /extra/docs
* added extra/docs/DCHModuleBuilding.ods to document the node creation process (using JLPAINT as an example)
* moved various testing .html files out of /client into /extra/test HTMLs
* fixed a bug in where tooltips werent appearing in context menus

2025-05-23 ------------------------------------------------------------------------------------------------------------
* renamed TKMEventHandlers to DocViewHandler -- just makes more sense now that it's evolved
* new child docs will now properly expand the doc they are a child of
* remembering expanded state of index entries is now stored and recalled when starting program or changing dbs