@@ -20,25 +20,10 @@ class DCH_CTE extends FG.DCH_BASE {     // CTE for div contenteditable="true" (p
     }; 
 
     async construct() {
-        await this.loadCss("CTE.css");              // add some <style> to the beginning of this.host
-    // create the contenteditable div and attach it to this.host
-        this.el = document.createElement("div");     // create a div inside .host and make it contenteditable
+        await this.loadStyle("CTE.css");                // add some <style> to the beginning of this.host
+        this.el = document.createElement("div");        // create a div inside .host and make it contenteditable
         this.el.classList.add("CTE");                   // use the above-loaded .css class
         this.el.setAttribute("contenteditable", "true");
-
-//         this.el.style.position = "absolute";
-//         this.el.style.left = "0px";
-//         this.el.style.top = "0px";
-//         this.el.style.right = "0px";
-//         this.el.style.bottom = "0px";
-//         this.el.style.resize = "none";
-//         this.el.style.padding = "2px";  // without this the cursor gets lost at start-of-line if there's a solid border 
-// this.el.style.border     = "1px solid black";      //??RSTEMP?? get-us-going mods to experiment on the el
-// // this.el.style.backgroundColor = "lightsalmon";
-// this.el.style.overflow   = "hidden";
-// //TMPTMPTMPTMPTMP        this.el.style.backgroundColor = "aqua";
-//         this.el.style.whiteSpace = "pre-wrap";       // preserve whitespace and wrap as needed
-//         this.el.style.wordWrap   = "break-word";     // auto-break very large words if needed
 
         this.el.innerHTML = '';         // if I don't do this and we don't type in it, it exports "undefined"
         this.host.appendChild(this.el);
